--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
+    <color name="active_tab_color">#D32F2F</color>
+    <color name="inactive_tab_color">#BDBDBD</color>
 
 
 
