--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -55,7 +55,7 @@
                     android:textStyle="bold"
                     android:visibility="gone"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/imgCart"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -72,12 +72,15 @@
                     android:gravity="center_horizontal|center_vertical"
                     android:paddingHorizontal="@dimen/sb_size_8"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@id/imgSetting"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/imgFavourites"
                     app:layout_constraintTop_toTopOf="parent"
                     android:inputType="text" />
 
-                <ImageView
+                <!--Right side icon is not needed since they can be inflated with
+                        onOptionMenuCreated -->
+
+                <!--<ImageView
                     android:id="@+id/imgSetting"
                     android:layout_width="@dimen/sb_size_24"
                     android:layout_height="@dimen/sb_size_24"
@@ -98,7 +101,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:contentDescription="@string/desc_cart"/>
+                    android:contentDescription="@string/desc_cart"/>-->
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
