--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -3,18 +3,16 @@
 
     <item android:id="@+id/shopFragment"
         android:title="@string/shop"
-        android:icon="@drawable/sl_home"/>
+        android:icon="@drawable/ic_home"/>
 
     <item android:id="@+id/categoryFragment"
         android:title="@string/category"
-        android:icon="@drawable/sl_category"/>
+        android:icon="@drawable/ic_category"/>
 
     <item android:id="@+id/newTrendFragment"
         android:title="@string/new_"
-        android:icon="@drawable/sl_trend"/>
-
+        android:icon="@drawable/ic_new"/>
     <item android:id="@+id/profileFragment"
         android:title="@string/me"
-        android:icon="@drawable/sl_profile"/>
-
+        android:icon="@drawable/ic_profile"/>
 </menu>
