Category Screen Loaded with data(WIP)

--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -24,9 +24,8 @@
                 android:layout_height="match_parent"
                 android:clipToPadding="false"
                 android:orientation="vertical"
-                android:paddingVertical="@dimen/sb_size_20"
-                android:paddingTop="@dimen/sb_size_20"
                 android:paddingBottom="200dp"
+                android:background="@color/grey_100"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -34,10 +33,10 @@
 
             <ViewStub
                 android:id="@+id/vsEmptyScreen"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout="@layout/no_internet_connected"
-                android:visibility="visible"
+                android:visibility="gone"
                 android:elevation="@dimen/sb_size_1"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
