--- a/app/src/main/res/layout/item_category_products.xml
+++ b/app/src/main/res/layout/item_category_products.xml
@@ -2,25 +2,32 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginVertical="@dimen/sb_size_6"
+    android:layout_marginHorizontal="@dimen/sb_text_size_12"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/white"
     xmlns:tools="http://schemas.android.com/tools">
 
     <TextView
         android:id="@+id/tvProductCategory"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/sb_size_10"
         android:text="DummyCategory"
+        android:paddingHorizontal="@dimen/sb_size_20"
         android:textColor="@color/blue_grey_900"
         android:textSize="@dimen/sb_text_size_22"
-        android:layout_margin="@dimen/sb_size_26"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_Products"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/sb_size_20"
+        android:layout_margin="@dimen/sb_size_4"
+        android:nestedScrollingEnabled="false"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
