--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:id="@+id/clProductRootView"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -9,8 +10,9 @@
         android:id="@+id/cvDummy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/sb_size_8"
+        android:layout_margin="@dimen/sb_size_6"
         app:cardCornerRadius="@dimen/sb_size_8"
+        app:cardUseCompatPadding="true"
         app:cardElevation="@dimen/sb_size_0"
         tools:viewBindingIgnore="false"
         app:layout_constraintEnd_toEndOf="parent"
@@ -20,7 +22,7 @@
         <ImageView
             android:id="@+id/imgProductImage"
             android:layout_width="120dp"
-            android:layout_height="170dp"
+            android:layout_height="165dp"
             tools:src="@color/deep_orange_600" />
 
     </androidx.cardview.widget.CardView>
@@ -29,11 +31,12 @@
         android:id="@+id/tvProductPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/sb_size_8"
+        android:layout_marginBottom="@dimen/sb_size_8"
         android:text="1234 $"
         android:textColor="@color/grey_900"
-        android:textSize="@dimen/sb_text_size_14"
+        android:textSize="@dimen/sb_text_size_15"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/cvDummy"
         app:layout_constraintStart_toStartOf="@id/cvDummy"
         app:layout_constraintTop_toBottomOf="@id/cvDummy" />
 
