--- a/app/src/main/res/layout/activity_otp.xml
+++ b/app/src/main/res/layout/activity_otp.xml
@@ -63,17 +63,17 @@
                 android:layout_marginTop="100dp"
                 android:cursorVisible="true"
                 android:inputType="number"
-                android:padding="5dp"
+                android:padding="@dimen/sb_size_2"
                 android:textColor="@color/black"
                 android:textSize="@dimen/sb_text_size_16"
                 android:textStyle="bold"
                 app:cursorColor="@color/black"
                 app:cursorWidth="2dp"
                 app:hideLineWhenFilled="false"
-                app:itemCount="4"
+                app:itemCount="6"
                 app:itemHeight="@dimen/sb_size_40"
                 app:itemRadius="0dp"
-                app:itemSpacing="@dimen/sb_size_10"
+                app:itemSpacing="@dimen/sb_size_5"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.497"
                 app:layout_constraintStart_toStartOf="parent"
