--- a/app/src/main/res/layout/fragment_wish_list.xml
+++ b/app/src/main/res/layout/fragment_wish_list.xml
@@ -11,7 +11,7 @@
         android:id="@+id/wish_list_recycler_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
-
+        android:nestedScrollingEnabled="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
