--- a/app/src/main/res/layout/item_category_image.xml
+++ b/app/src/main/res/layout/item_category_image.xml
@@ -7,32 +7,24 @@
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/sb_size_16"
-        android:layout_weight="1"
+        android:layout_margin="@dimen/sb_size_4"
+        app:cardUseCompatPadding="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:id="@+id/imgProductImage"
-                android:layout_width="170dp"
-                android:layout_height="100dp"
-                android:background="@color/blue_grey_900"
-                android:contentDescription="@string/desc_category_image"
-                android:scaleType="center"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-
+        <ImageView
+            android:id="@+id/imgCategoryImage"
+            android:layout_width="200dp"
+            android:layout_height="110dp"
+            android:background="@color/blue_grey_900"
+            android:contentDescription="@string/desc_category_image"
+            android:scaleType="centerCrop"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
