--- a/app/src/main/res/layout/no_internet_connected.xml
+++ b/app/src/main/res/layout/no_internet_connected.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:background="@color/white"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:clickable="true"
+    android:focusable="true"
+    android:elevation="@dimen/sb_size_8"
+    android:background="@color/white">
 
     <ImageView
         android:id="@+id/imgNoInternet"
@@ -21,11 +23,11 @@
         android:id="@+id/tvNoInternetConnection"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/sb_size_26"
         android:text="@string/no_internet_connected"
         android:textColor="@color/blue_grey_900"
         android:textSize="@dimen/sb_text_size_22"
         android:textStyle="bold"
-        android:layout_marginTop="@dimen/sb_size_26"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgNoInternet" />
@@ -34,11 +36,11 @@
         android:id="@+id/tvSwipeToRefresh"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/sb_size_6"
         android:text="@string/hint_swipe_to_refresh"
         android:textColor="@color/blue_grey_900"
         android:textSize="@dimen/sb_text_size_16"
         android:textStyle="normal"
-        android:layout_marginTop="@dimen/sb_size_6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvNoInternetConnection" />
