Added Email Verification

--- a/app/src/main/res/layout/activity_account_security.xml
+++ b/app/src/main/res/layout/activity_account_security.xml
@@ -9,7 +9,6 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
-        app:titleTextColor="@color/black"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
@@ -17,62 +16,92 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
-        app:title="Account Security" />
+        app:title="Account Security"
+        app:titleTextColor="@color/black" />
 
-    <LinearLayout
-        android:layout_below="@+id/toolbar"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/sb_size_10"
-        android:background="@color/white"
-        android:orientation="vertical"
-        android:paddingVertical="@dimen/sb_size_5">
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/emailVerifyTextView"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center|start"
-            android:paddingHorizontal="@dimen/sb_size_25"
-            android:paddingVertical="@dimen/sb_size_15"
-            android:text="Email Verification"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            app:drawableEndCompat="@drawable/ic_baseline_right_24" />
+            android:layout_height="match_parent">
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/sb_size_2"
-            android:background="@color/grey_300" />
+            <LinearLayout
+                android:id="@+id/linearLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:orientation="vertical"
+                android:layout_marginTop="@dimen/sb_size_5"
+                android:paddingVertical="@dimen/sb_size_5"
+                app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/changePassTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center|start"
-            android:paddingHorizontal="@dimen/sb_size_25"
-            android:paddingVertical="@dimen/sb_size_18"
-            android:text="Change Password"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            app:drawableEndCompat="@drawable/ic_baseline_right_24" />
+                <TextView
+                    android:id="@+id/emailVerifyTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center|start"
+                    android:paddingHorizontal="@dimen/sb_size_25"
+                    android:paddingVertical="@dimen/sb_size_15"
+                    android:text="Email Verification"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                    app:drawableEndCompat="@drawable/ic_baseline_right_24" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/sb_size_2"
-            android:background="@color/grey_300" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/sb_size_2"
+                    android:background="@color/grey_300" />
 
-        <TextView
-            android:id="@+id/deleteAccountTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center|start"
-            android:paddingHorizontal="@dimen/sb_size_25"
-            android:paddingVertical="@dimen/sb_size_15"
-            android:text="Delete Account"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            app:drawableEndCompat="@drawable/ic_baseline_right_24" />
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/changePassTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center|start"
+                    android:paddingHorizontal="@dimen/sb_size_25"
+                    android:paddingVertical="@dimen/sb_size_18"
+                    android:text="Change Password"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                    app:drawableEndCompat="@drawable/ic_baseline_right_24" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/sb_size_2"
+                    android:background="@color/grey_300" />
+
+                <TextView
+                    android:id="@+id/deleteAccountTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center|start"
+                    android:paddingHorizontal="@dimen/sb_size_25"
+                    android:paddingVertical="@dimen/sb_size_15"
+                    android:text="Delete Account"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                    app:drawableEndCompat="@drawable/ic_baseline_right_24" />
+            </LinearLayout>
+            <ViewStub
+                android:id="@+id/vsEmptyScreen"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:elevation="@dimen/sb_size_4"
+                android:layout="@layout/no_internet_connected"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
